--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="assets/css/all.min.css">
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <link rel="stylesheet" href="assets/css/dataTables.bootstrap4.css">
+  <link rel="stylesheet" href="assets/css/dataTables.bootstrap4.min.css">
   <link rel="stylesheet" href="assets/css/adminlte.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
@@ -18,6 +18,7 @@
 <script src="assets/js/jquery.js"></script>
 <script src="assets/js/bootstrap.bundle.js"></script>
 <script src="assets/js/jquery.dataTables.js"></script>
+<script src="assets/js/dataTables.bootstrap4.js"></script>
 <script src="assets/js/adminlte.js"></script>
 <script src="assets/js/demo.js"></script>
 </html>
